--- a/style.css
+++ b/style.css
@@ -30,6 +30,23 @@ li{
 a{
     text-decoration: none;
     position: relative;
+    transition: opacity 300ms ease;
+}
+
+i:hover{
+    opacity: 0.7;
+}
+
+nav{
+    padding: 0 12px;
+}
+
+.language__list{
+    justify-content: center;
+}
+
+.row{
+    padding: 0 12px;
 }
 
 .link__hover-effect:after{
@@ -39,10 +56,21 @@ a{
     background-color: black;
     width: 0;
     bottom: -3px;
+    right: 0;
+    transition: all 300ms ease;
 }
 
 .link__hover-effect:hover:after{
     width: 100%;
+    left: 0;
+}
+
+.link__hover-effect--white:after{
+    background-color: #fff;
+}
+
+.link__hover-effect--black:after{
+    background-color: #000;
 }
 
 .flex{
@@ -147,6 +175,19 @@ nav{
     overflow: hidden;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
     margin-bottom: 28px;
+    animation: animate-profile-picture 800ms 200ms backwards;
+}
+
+@keyframes animate-profile-picture{
+    0%{
+        transform: scale(0);
+    }
+    80%{
+        transform: scale(1.1);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
 
 .about-me__picture {
@@ -155,16 +196,44 @@ nav{
 
 .about-me__info--title{
     margin-bottom: 16px;
+    animation: fade-up 650ms 400ms backwards
 }
 
 .about-me__info--para{
     font-size: 20px;
     margin-bottom: 28px;
+    animation: fade-up 650ms 600ms backwards
 }
 
- 
+.wave{
+    display: inline-block;
+    animation: animate-wave 800ms infinite ease-in-out;
+}
 
-.about-me__link {
+@keyframes animate-wave{
+    0%{
+        transform: rotate(0);
+    }
+    50%{
+        transform: rotate(30deg);
+    }
+    100%{
+        transform: rotate(0);
+    }
+}
+
+.about-me__links{
+    animation: fade-up 650ms 800ms backwards
+}
+
+@keyframes fade-up{
+    0%{
+        opacity: 0;
+        transform: translateY(40px);
+    }
+}
+
+ .about-me__link {
     font-size: 20px;
     color: #242424;
     text-decoration: none;
@@ -178,6 +247,16 @@ nav{
 
 .about-me__img{
     width: 100%;
+    animation: fade-in 1200ms 800ms backwards;
+}
+
+@keyframes fade-in{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 
 /* TECH STACK */
@@ -270,7 +349,7 @@ nav{
 
 .project:hover .project__img {
     transform: scale(1.07);
-    filter: blur(5x);
+    filter: blur(5px);
 }
 
 .project__list{
@@ -364,4 +443,63 @@ footer{
 .footer__anchor:hover .footer__logo--popper{
     transform: translateX(60px);
     opacity: 1;
+}
+
+/*small tablets, large smart phones*/
+
+@media (max-width: 768px){
+    nav{
+        height: 68px;
+    }
+
+    h1{
+        font-size: 28px;
+    }
+    .about-me__info--para{
+        font-size: 18px;
+    }
+
+    .language{
+        width: calc(100%/2)
+    }
+    
+    .project__description--para{
+        font-size: 14px;
+    }
+
+    .project__description{
+        padding-right: 30px;
+        left: 30px;
+    }
+}
+
+/*small phones*/
+
+@media (max-width: 480px){
+    .nav__link:not(:last-child){
+        display: none;
+    }
+    .project__description{
+        padding: 0;
+        left: 0;
+        width: 100%;
+    }
+    .project__description--para{
+        display: none;
+    }
+    .project__description--links{
+        display: flex;
+        justify-content: center;
+    }
+    .project__description--sub-title{
+        display: flex;
+        justify-content: center;
+        margin: 12;
+        font-size: 32;
+    }
+    .project__description--title{
+        line-height: 1;
+        text-align: center;
+    }
+    
 }
